build(DataLoader): create this class to load admin data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,11 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.initialization-mode=always
 
+initial.admin.email=${ADMIN_EMAIL}
+initial.admin.password=${ADMIN_PASSWORD}
+
+spring.config.import=optional:file:.env[.properties]
+
 spring.sql.init.mode=always
 
 #spring.jpa.hibernate.ddl-auto=create-drop
