--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,12 @@ spring.datasource.initialization-mode=always
 initial.admin.email=${ADMIN_EMAIL}
 initial.admin.password=${ADMIN_PASSWORD}
 
-spring.config.import=optional:file:.env[.properties]
+#spring.config.import=optional:file:.env[.properties]
 
 spring.sql.init.mode=always
 
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
