--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 server.port=${SERVER_PORT}
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
 logging.level.com.dogwalks=DEBUG
