--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,11 +2,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.output.ansi.enabled=ALWAYS
 
-app.jwt.secret=${JWT_SECRET}
-app.jwt.expiration=${JWT_EXPIRATION}
+app.jwt.secret=poeunhdyqbsjurkdoancnuendkaskdhejdsfwrgefmuweyf43x758jy
+app.jwt.expiration=864000000
 
-initial.admin.email=${ADMIN_EMAIL}
-initial.admin.password=${ADMIN_PASSWORD}
+initial.admin.email=testadmin@test.com
+initial.admin.password=testAdminPsw547,
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
@@ -18,4 +18,5 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.com.dogwalks=DEBUG
+logging.level.org.testcontainers=INFO
 
