--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -7,11 +7,17 @@ spring:
   output:
     ansi:
       enabled: ALWAYS
+
   datasource:
     url: jdbc:mysql://mysql:3306/dogwalks?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: ${DB_USER:dog}
     password: ${DB_PASSWORD:dog}
-    initialization-mode: always
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  sql:
+    init:
+      mode: always
+
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -30,7 +36,7 @@ app:
 initial:
   admin:
     email: ${ADMIN_EMAIL:admin@example.com}
-    password: ${ADMIN_PASSWORD:admin123}
+    password: ${ADMIN_PASSWORD:adminExample123}
 
 logging:
   level:
@@ -38,4 +44,4 @@ logging:
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.springframework.security: DEBUG
     org.springframework.web: DEBUG
-    com.dogwalks: DEBUG
+    com.backend.dogwalks: DEBUG
