--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,29 @@
 spring.application.name=dogwalks
 spring.output.ansi.enabled=ALWAYS
-
-app.jwt.secret=${JWT_SECRET}
-app.jwt.expiration=${JWT_EXPIRATION}
+server.port=${SERVER_PORT}
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.initialization-mode=always
-
-initial.admin.email=${ADMIN_EMAIL}
-initial.admin.password=${ADMIN_PASSWORD}
-
-#spring.config.import=optional:file:.env[.properties]
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-server.port=${SERVER_PORT}
+app.jwt.secret=${JWT_SECRET}
+app.jwt.expiration=${JWT_EXPIRATION}
+
+initial.admin.email=${ADMIN_EMAIL}
+initial.admin.password=${ADMIN_PASSWORD}
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
-logging.level.com.dogwalks=DEBUG
+logging.level.com.backend.dogwalks=DEBUG
