refactor(readme/app-docker.yml/app.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ app.jwt.expiration=${JWT_EXPIRATION}
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.password=${DB_ROOT_PASSWORD}
 spring.datasource.initialization-mode=always
 
 initial.admin.email=${ADMIN_EMAIL}
