--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -30,7 +30,7 @@ app:
 initial:
   admin:
     email: ${ADMIN_EMAIL:admin@example.com}
-    password: ${ADMIN_PASSWORD:admin123}
+    password: ${ADMIN_PASSWORD:admin123456.}
 
 logging:
   level:
