--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,15 @@ services:
       SPRING_PROFILES_ACTIVE: docker
       SERVER_PORT: 8080
 
-      DB_URL: jdbc:mysql://mysql:3306/dogwalks?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-      DB_USER: ${DB_USER:dog}
-      DB_PASSWORD: ${DB_PASSWORD:dog}
+      DB_URL: jdbc:mysql://dogwalks-db:3306/dogwalks?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      DB_USER: ${DB_USER:-dog}
+      DB_PASSWORD: ${DB_PASSWORD:-dog}
 
-      JWT_SECRET_KEY: ${JWT_SECRET:change-me}
-      JWT_EXPIRATION: ${JWT_EXPIRATION:3600000}
+      JWT_SECRET: ${JWT_SECRET:-change-me}
+      JWT_EXPIRATION: ${JWT_EXPIRATION:-3600000}
 
-      ADMIN_EMAIL: ${ADMIN_EMAIL:admin@example.com}
-      ADMIN_PASSWORD: ${ADMIN_PASSWORD:admin123456.}
+      ADMIN_EMAIL: ${ADMIN_EMAIL:-admin@example.com}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD:-admin123456.}
     restart: unless-stopped
     depends_on:
       dogwalks-db:
@@ -39,16 +39,17 @@ services:
     container_name: dogwalks-db
     environment:
       MYSQL_DATABASE: dogwalks
-      MYSQL_USER: ${DB_USER:dog}
-      MYSQL_PASSWORD: ${DB_PASSWORD:dog}
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:rootdog}
+      MYSQL_USER: ${DB_USER:-dog}
+      MYSQL_PASSWORD: ${DB_PASSWORD:-dog}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-rootdog}
     ports:
       - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping","-h", "localhost", "-u", "${DB_USER:dog}", "-p${DB_PASSWORD:dog}"]
+      test: > 
+        CMD mysqladmin ping -h localhost -u ${DB_USER:-dog} -p${DB_PASSWORD:-dog}
       interval: 10s
       timeout: 5s
       retries: 5
