--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=dogwalks
 spring.output.ansi.enabled=ALWAYS
-server.port=${SERVER_PORT}
+server.port=${SERVER_PORT:8080}
 
 spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_ROOT_USER:dog}
+spring.datasource.password=${DB_ROOT_PASSWORD:dog}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.sql.init.mode=always
