refactor(application.properties): to add a different URL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=dogwalks
 spring.output.ansi.enabled=ALWAYS
 server.port=${SERVER_PORT:8080}
 
-spring.datasource.url=${DB_URL}
+spring.datasource.url=${DB_URL_LOCAL}
 spring.datasource.username=${DB_ROOT_USER:dog}
 spring.datasource.password=${DB_ROOT_PASSWORD:dog}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
