--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,8 @@ services:
       MYSQL_ROOT_PASSWORD: rootdog
     ports:
       - "3307:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
+#    volumes:
+#      - mysql_data:/var/lib/mysql
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-prootdog"]
@@ -58,6 +58,6 @@ networks:
   dogwalks-network:
     driver: bridge
 
-volumes:
-  mysql_data:
-    driver: local
+# volumes:
+#  mysql_data:
+#    driver: local
