--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,21 +12,21 @@ jobs:
     name: Run test and analysis
     runs-on: ubuntu-latest      # Máquina virtual donde se ejecuta
     
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: rootgithub
-          MYSQL_DATABASE: dogwalks_github_test
-          MYSQL_USER: github_test_user
-          MYSQL_PASSWORD: github_test_password
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
+#    services:
+#      mysql:
+#        image: mysql:8.0
+#        env:
+#          MYSQL_ROOT_PASSWORD: rootgithub
+#          MYSQL_DATABASE: dogwalks_github_test
+#          MYSQL_USER: github_test_user
+#          MYSQL_PASSWORD: github_test_password
+#        ports:
+#          - 3306:3306
+#        options: >-
+#          --health-cmd="mysqladmin ping --silent"
+#          --health-interval=10s
+#          --health-timeout=5s
+#          --health-retries=3
     
     steps:
     # Step 1: Download code
