--- a/pom.xml
+++ b/pom.xml
@@ -144,4 +144,124 @@
 		</plugins>
 	</build>
 
+	<!-- Agregar estos perfiles a tu pom.xml existente -->
+
+	<profiles>
+		<!-- Perfil por defecto: Solo tests unitarios -->
+		<profile>
+			<id>unit-tests</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.0.0-M9</version>
+						<configuration>
+							<!-- Solo tests unitarios -->
+							<includes>
+								<include>**/*Test.java</include>
+							</includes>
+							<!-- Excluir tests de integración -->
+							<excludes>
+								<exclude>**/*IntegrationTest.java</exclude>
+								<exclude>**/DogwalksApplicationTests.java</exclude>
+							</excludes>
+							<useSystemClassLoader>false</useSystemClassLoader>
+							<argLine>-Xmx1024m</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<!-- Perfil para tests de integración con TestContainers -->
+		<profile>
+			<id>integration-tests</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>3.0.0-M9</version>
+						<configuration>
+							<!-- Solo tests de integración -->
+							<includes>
+								<include>**/*IntegrationTest.java</include>
+								<include>**/DogwalksApplicationTests.java</include>
+							</includes>
+							<!-- Configuración específica para TestContainers -->
+							<systemPropertyVariables>
+								<testcontainers.reuse.enable>false</testcontainers.reuse.enable>
+							</systemPropertyVariables>
+							<!-- Más memoria para TestContainers -->
+							<argLine>-Xmx2048m</argLine>
+							<!-- Timeout aumentado para CI -->
+							<forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<!-- Perfil completo para CI -->
+		<profile>
+			<id>ci-all-tests</id>
+			<build>
+				<plugins>
+					<!-- Tests unitarios primero -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.0.0-M9</version>
+						<configuration>
+							<includes>
+								<include>**/*Test.java</include>
+							</includes>
+							<excludes>
+								<exclude>**/*IntegrationTest.java</exclude>
+								<exclude>**/DogwalksApplicationTests.java</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+
+					<!-- Tests de integración después -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>3.0.0-M9</version>
+						<configuration>
+							<includes>
+								<include>**/*IntegrationTest.java</include>
+								<include>**/DogwalksApplicationTests.java</include>
+							</includes>
+							<systemPropertyVariables>
+								<testcontainers.reuse.enable>false</testcontainers.reuse.enable>
+							</systemPropertyVariables>
+							<argLine>-Xmx2048m</argLine>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 </project>
