bugfix(ci): test 5 app.properties original y ci forzr H2 y variables de entorno

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,15 +1,20 @@
-# Configuración para tests unitarios en CI
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Tu configuración ORIGINAL para local
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Mantener el resto de tu configuración de test existente
 spring.output.ansi.enabled=ALWAYS
 app.jwt.secret=poeunhdyqbsjurkdoancnuendkaskdhejdsfwrgefmuweyf43x758jy
 app.jwt.expiration=864000000
 initial.admin.email=testadmin@test.com
 initial.admin.password=testAdminPsw547,
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.com.dogwalks=DEBUG
+logging.level.org.testcontainers=INFO
