bugfix(docker-compose-test): add volume for maven cache

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -17,6 +17,10 @@ services:
         source: . # Current directory (project root)
         target: /src # Mount point inside container
         read_only: true # Prevent modifications to source code
+    # Mount Maven cache to speed up builds
+      - type: volume
+        source: maven-cache
+        target: /root/.m2
 
     # Run Maven test command with test profile
     # Using -Ptest profile to avoid building JAR files (allows read-only source mounting)
@@ -35,3 +39,8 @@ services:
 
     # Restart policy - never restart (single-run test container)
     restart: no
+
+# Named volumes for Maven cache
+volumes:
+  maven-cache:
+    driver: local
