--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   test-docker:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
@@ -15,7 +14,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Run tests with docker-compose
-        run: docker compose -f docker-compose-test.yml up --quiet-pull --abort-on-container-exit --exit-code-from dogwalks-test
+        run: docker compose -f docker-compose-test.yml up --quiet-pull --abort-on-container-exit --exit-code-from test
 
       - name: Clean up
         if: always()
