--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,6 +5,9 @@ spring.output.ansi.enabled=ALWAYS
 app.jwt.secret=poeunhdyqbsjurkdoancnuendkaskdhejdsfwrgefmuweyf43x758jy
 app.jwt.expiration=864000000
 
+initial.admin.email=testadmin@test.com
+initial.admin.password=testAdminPsw547,
+
 ADMIN_EMAIL=testadmin@test.com
 ADMIN_PASSWORD=testAdminPsw547,
 
