--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -8,8 +8,8 @@ app.jwt.expiration=864000000
 initial.admin.email=testadmin@test.com
 initial.admin.password=testAdminPsw547,
 
-ADMIN_EMAIL=testadmin@test.com
-ADMIN_PASSWORD=testAdminPsw547,
+#ADMIN_EMAIL=testadmin@test.com
+#ADMIN_PASSWORD=testAdminPsw547,
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
