fix: add changes in pom and app properties for tests to ty to solve surefire error

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -11,6 +11,16 @@ initial.admin.password=testAdminPsw547,
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+spring.devtools.restart.enabled=false
+spring.devtools.livereload.enabled=false
+
+# HikariCP configuration for tests
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.max-lifetime=300000
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.idle-timeout=30000
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
